--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="고현림의 포트폴리오입니다. Portfolio of Ko Hyeon Lim">
+    <meta name="author" content="고현림">
+    <title>고현림 - Ko Hyeon Lim</title>
     <style>
         a {
             text-decoration: none;
@@ -12,8 +15,8 @@
   
   <body>
       <header>
-          <h2 align="center">Hello, I'm Ko Hyeon Lim</h2>
-          <h2 align="center">안녕하세요. 고현림입니다.</h2>
+          <h2 align="center">Exploring innovative technologies and adding value through creative approaches.</h2>
+          <h2 align="center">혁신적인 기술을 탐구하며, 창의적인 접근으로 가치를 더합니다.</h2>
       </header>
 
       <hr />
