--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   
   <body>
       <header>
-          <h2 align="center">Exploring innovative technologies and adding value through creative approaches.</h2>
-          <h2 align="center">혁신적인 기술을 탐구하며, 창의적인 접근으로 가치를 더합니다.</h2>
+          <h3 align="center">Welcome to My Page!</h3>
+          <h3 align="center">Exploring innovative technologies and adding value through creative approaches.</h3>
       </header>
 
       <hr />
