--- a/index.html
+++ b/index.html
@@ -51,14 +51,17 @@
               <a href="https://github.com/indianaPoly/blockchain-arbitrage">
                   <h5>2024.06 ~ 2024.09<br />[BlockWaveLabs] OnChain Arbitrage</h5>
               </a>
-              <a href="https://github.com/indianaPoly/backend-telegrambot">
-                  <h5>2024.08 ~ 현재<br />[개인] Job Telegram Bot</h5>
-              </a>
               <a href="https://github.com/indianaPoly/blockchain-mev">
-                  <h5>2024.08 ~ 현재<br />[개인] MEV Template - Uniswap V3</h5>
+                  <h5>2024.08 ~ 2024.09<br />[개인] MEV Template - Uniswap V3</h5>
+              </a>
+              <a href="https://github.com/indianaPoly/backend-telegrambot">
+                  <h5>2024.08 ~ STOP<br />[개인] Job Telegram Bot</h5>
               </a>
               <a href="https://github.com/indianaPoly/blockchain-localSimulator">
                   <h5>2024.09 ~ 현재<br />[개인] Blockchain Local Simulator</h5>
+              </a>
+              <a href="https://github.com/indianaPoly/go-cliApp">
+                  <h5>2024.09 ~ 현재<br />[개인] GO LANG CLI-APPLICATION</h5>
               </a>
           </div>
           <br />
