--- a/index.html
+++ b/index.html
@@ -34,8 +34,14 @@
       <div align="center">
           <h3>Project Experience</h3>
 
-          <h4>[Development Projects]</h4>
+          <h4>[Development]</h4>
           <div>
+              <a href="https://yourssu.com/">
+                  <h5>2023.01 ~ 2024.08<br />[YOURSSU] Web Frontend MEMBER</h5>
+              </a>
+              <a href="https://gdscsoongsil.pages.dev/">
+                  <h5>2023.09 ~ 현재<br />[Google Development Student Clubs] MEMBER</h5>
+              </a>
               <a href="https://github.com/indianaPoly/realword_PB">
                   <h5>2023.06 ~ 2023.09<br />[YOURSSU] RealWorld Pair Programming</h5>
               </a>
@@ -66,7 +72,7 @@
           </div>
           <br />
 
-          <h4>[Non-Development Projects]</h4>
+          <h4>[Non-Development]</h4>
           <div>
               <h5>2019.09 ~ 2019.12<br />[만장일치] 토론동아리</h5>
               <h5>2022.03 ~ 2022.06<br />[숭실대학교] 오픈소스를 이용한 실전창업</h5>
