--- a/index.html
+++ b/index.html
@@ -244,33 +244,6 @@
             
             <h4>[Development]</h4>
             <div class="project-grid">
-                <a href="https://gdscsoongsil.pages.dev/">
-                    <div class="card ongoing">
-                        <h5 class="date">2023.09 ~ 현재</h5>
-                        <div class="description">
-                            <div class="organization">Google Development Student Clubs</div>
-                            <div class="activity">Web Development Member</div>
-                        </div>
-                    </div>
-                </a>
-                <a href="https://github.com/indianaPoly/blockchain-localSimulator">
-                    <div class="card ongoing">
-                        <h5 class="date">2024.09 ~ 현재</h5>
-                        <div class="description">
-                            <div class="organization">개인 프로젝트</div>
-                            <div class="activity">Blockchain Local Simulator</div>
-                        </div>
-                    </div>
-                </a>
-                <a href="https://github.com/indianaPoly/go-cliApp">
-                    <div class="card ongoing">
-                        <h5 class="date">2024.09 ~ 현재</h5>
-                        <div class="description">
-                            <div class="organization">개인 프로젝트</div>
-                            <div class="activity">GO LANG CLI-APPLICATION</div>
-                        </div>
-                    </div>
-                </a>
                 <a href="https://yourssu.com/">
                     <div class="card completed">
                         <h5 class="date">2023.01 ~ 2024.08</h5>
@@ -340,6 +313,33 @@
                         <div class="description">
                             <div class="organization">개인 프로젝트</div>
                             <div class="activity">Job Telegram Bot</div>
+                        </div>
+                    </div>
+                </a>
+                <a href="https://github.com/indianaPoly/blockchain-localSimulator">
+                    <div class="card completed">
+                        <h5 class="date">2024.09 ~ STOP</h5>
+                        <div class="description">
+                            <div class="organization">개인 프로젝트</div>
+                            <div class="activity">Blockchain Local Simulator</div>
+                        </div>
+                    </div>
+                </a>
+                <a href="https://github.com/indianaPoly/blockchain-vaccination_medicalHistory">
+                    <div class="card completed">
+                        <h5 class="date">2024.09 ~ 2024.12</h5>
+                        <div class="description">
+                            <div class="organization">캡스톤종합디자인프로젝트 1</div>
+                            <div class="activity">자녀 건강관리 서비스</div>
+                        </div>
+                    </div>
+                </a>
+                <a href="https://gdscsoongsil.pages.dev/">
+                    <div class="card ongoing">
+                        <h5 class="date">2023.09 ~ 현재</h5>
+                        <div class="description">
+                            <div class="organization">Google Development Student Clubs</div>
+                            <div class="activity">Web Development Member</div>
                         </div>
                     </div>
                 </a>
